--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.15.11",
+    "@types/three": "^0.178.1",
+    "framer-motion": "^10.16.4",
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "framer-motion": "^10.16.4",
     "react-simple-typewriter": "^4.0.0",
-    "lucide-react": "^0.263.1",
-    "@react-three/fiber": "^8.15.11",
-    "@react-three/drei": "^9.88.13",
     "three": "^0.157.0"
   },
   "devDependencies": {
